Update server dependencies
- Update GLSP to 0.9.0
- Update Model Server to current 0.7.0
- Add modelserver.glsp.integration module 0.7.0
- Update eclipse version to 2021-09
- Rename targetplatform file

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -40,7 +40,7 @@
 								<groupId>com.eclipsesource.uml</groupId>
 								<artifactId>targetplatform</artifactId>
 								<version>0.1.0</version>
-								<classifier>r2020-09</classifier>
+								<classifier>targetplatform</classifier>
 							</artifact>
 						</target>
 						<environments>
