--- a/client/packages/common/package.json
+++ b/client/packages/common/package.json
@@ -7,23 +7,18 @@
     "theia-extension"
   ],
   "dependencies": {
-    "@theia/core": "latest"
+    "@theia/core": "^1.0.0"
   },
   "devDependencies": {
-    "css-loader": "^1.0.1",
-    "eslint": "^6.8.0",
     "rimraf": "^2.6.1",
-    "ts-loader": "^5.3.0",
-    "typescript": "~3.9.2",
-    "webpack": "^4.23.1"
+    "typescript": "~3.9.2"
   },
   "scripts": {
     "prepare": "yarn run clean && yarn run build",
     "clean": "rimraf lib",
     "build": "tsc && yarn run lint",
     "lint": "eslint -c ./.eslintrc.js --ext .ts ./src",
-    "watch": "tsc -w",
-    "bundle": "webpack --progress --config ./configs/webpack.config.js"
+    "watch": "tsc -w"
   },
   "files": [
     "lib",
