--- a/client/packages/uml-theia-integration/package.json
+++ b/client/packages/uml-theia-integration/package.json
@@ -24,13 +24,13 @@
     "@eclipse-glsp/theia-integration": "next",
     "@eclipsesource/uml-glsp-common": "0.1.0",
     "@eclipsesource/uml-sprotty": "0.1.0",
-    "@theia/core": "latest",
-    "@theia/navigator": "latest"
+    "@theia/core": "^1.0.0",
+    "@theia/navigator": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "rimraf": "^2.6.1",
-    "typescript": "~3.9.2"
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "prepare": "yarn run clean && yarn run build",
