--- a/client/packages/uml-theia-integration/package.json
+++ b/client/packages/uml-theia-integration/package.json
@@ -30,7 +30,7 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "rimraf": "^2.6.1",
-    "typescript": "^4.2.3"
+    "typescript": "~4.5.5"
   },
   "scripts": {
     "prepare": "yarn run clean && yarn run build",
